[gd_scene load_steps=11 format=4 uid="uid://cbiw1tglncahn"]

[ext_resource type="TileSet" uid="uid://dulhu4nsq70uv" path="res://Maps/DungeonTileset.tres" id="1_8kufv"]
[ext_resource type="Script" uid="uid://0a1jr1ppxssi" path="res://Maps/Home.gd" id="1_ns77l"]
[ext_resource type="FontFile" uid="uid://wige0wqmw7c7" path="res://Resources/fonts/Early GameBoy.ttf" id="3_20c0y"]
[ext_resource type="PackedScene" uid="uid://dx6qgbly3aoao" path="res://Characters/NPCs/Armorer.tscn" id="4_8hjcu"]
[ext_resource type="PackedScene" uid="uid://ceqvkhki38wwr" path="res://Characters/NPCs/Librarian.tscn" id="5_hlh4u"]
[ext_resource type="PackedScene" uid="uid://cqtbn2dl7psx" path="res://Characters/NPCs/Tome.tscn" id="6_fw0ow"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_cxcv7"]
vertices = PackedVector2Array(230, 26, 234, 26, 234, 38, 262, 38, 262, 42, 266, 42, 266, 54, 278, 54, 278, 58, 282, 58, 282, 70, 294, 70, 294, 90, 298, 90, 298, 102, 310, 102, 310, 326, 305.859, 326, 294, 337.859, 294, 358, 289.859, 358, 278, 369.859, 278, 374, 273.859, 374, 42, 337.859, 262, 385.859, 262, 390, 241.859, 390, 230, 401.859, 230, 406, 106, 406, 106, 401.859, 94.1406, 390, 74, 390, 74, 385.859, 62.1406, 374, 58, 374, 58, 369.859, 46.1406, 358, 42, 358, 30.1406, 326, 26, 326, 26, 102, 38, 102, 38, 90, 42, 90, 42, 70, 54, 70, 54, 58, 58, 58, 58, 54, 70, 54, 70, 42, 74, 42, 74, 38, 102, 38, 102, 26, 106, 26, 106, 22, 230, 22)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(2, 3, 4), PackedInt32Array(4, 5, 6), PackedInt32Array(6, 7, 8), PackedInt32Array(8, 9, 10), PackedInt32Array(10, 11, 12), PackedInt32Array(12, 13, 14), PackedInt32Array(14, 15, 16, 17), PackedInt32Array(18, 19, 20), PackedInt32Array(21, 22, 23, 24), PackedInt32Array(25, 26, 27), PackedInt32Array(28, 29, 30, 31), PackedInt32Array(32, 33, 34), PackedInt32Array(35, 36, 37), PackedInt32Array(38, 39, 24), PackedInt32Array(40, 41, 42, 43), PackedInt32Array(21, 24, 43, 44, 45, 18, 20), PackedInt32Array(45, 46, 47, 18), PackedInt32Array(47, 48, 49), PackedInt32Array(49, 50, 51), PackedInt32Array(51, 52, 53), PackedInt32Array(53, 54, 55), PackedInt32Array(6, 55, 56, 57, 2, 4), PackedInt32Array(57, 58, 59, 0), PackedInt32Array(57, 0, 2), PackedInt32Array(10, 12, 14, 17, 18, 51, 53, 55, 6), PackedInt32Array(6, 8, 10), PackedInt32Array(47, 49, 51, 18), PackedInt32Array(24, 40, 43), PackedInt32Array(27, 28, 31, 32), PackedInt32Array(35, 24, 23, 25, 27, 32, 34), PackedInt32Array(37, 38, 24), PackedInt32Array(24, 35, 37)])
outlines = Array[PackedVector2Array]([PackedVector2Array(328, 0, 328, 424, 8, 424, 8, 0)])

[sub_resource type="CircleShape2D" id="CircleShape2D_hxbls"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65f60"]
size = Vector2(18, 18)

[sub_resource type="LabelSettings" id="LabelSettings_2ohol"]
font = ExtResource("3_20c0y")
font_size = 8
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.784314)

[node name="Home" type="Node2D"]
script = ExtResource("1_ns77l")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_cxcv7")
navigation_layers = 2

[node name="Layer0" type="TileMapLayer" parent="NavigationRegion2D"]
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAIAAAAAAAMAAAADAAIAAAACAAAAAAAEAAIAAAABAAEAAAAEAAMAAAAIAAAAAAAFAAMAAAAJAAAAAAAGAAMAAAAGAAIAAAAHAAMAAAAGAAIAAAAHAAQAAAAJAAAAAAAIAAQAAAAJAAEAAAAJAAQAAAAHAAAAAAAJAAUAAAAHAAAAAAAKAAUAAAAJAAEAAAACAAMAAAADAAAAAAADAAMAAAABAAEAAAADAAQAAAAIAAIAAAAEAAQAAAAJAAEAAAAEAAUAAAAGAAEAAAAFAAUAAAAJAAIAAAAGAAUAAAAIAAEAAAAGAAYAAAAHAAIAAAAHAAYAAAAGAAIAAAAHAAcAAAAEAAEAAAAIAAcAAAAJAAEAAAAJAAcAAAAHAAIAAAAJAAgAAAACAAYAAAAKAAgAAAADAAYAAAALAAgAAAABAAYAAAALAAkAAAAGAAIAAAAMAAkAAAAIAAAAAAAMAAoAAAAIAAAAAAANAAoAAAAIAAEAAAAOAAsAAAAIAAAAAAAOAAwAAAAIAAIAAAAPAAwAAAAHAAEAAAAQAA0AAAAJAAAAAAARAA0AAAAHAAAAAAARAA4AAAAGAAAAAAASAA4AAAAHAAEAAAASAA8AAAAJAAIAAAATAA8AAAADAAYAAFAUAA8AAAAFAAAAAAAUABAAAAAFAAAAAAAIAA4AAAACAAYAAAAIAA0AAAAIAAAAAAAIAAwAAAAHAAAAAAAIAAsAAAAJAAEAAAAIAAoAAAAHAAAAAAAIAAkAAAAIAAEAAAAIAAgAAAACAAYAAAAHAAgAAAAHAAAAAAAGAAgAAAAHAAEAAAAGAAcAAAADAAYAAAAFAAcAAAADAAYAAAAFAAYAAAAIAAEAAAAEAAYAAAAEAAEAAAADAAYAAAACAAYAAAADAAUAAAAHAAAAAAACAAUAAAABAAIAAAACAAQAAAABAAEAAAABAAQAAAAAAAEAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAoAAAAAAAIAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAEAAAAAAA0AAAAAAAEAAAAAAA4AAAAAAAMAAAAAAA8AAAAAAAIAAAAAABAAAAAAAAIAAAAAABEAAAAAAAAAAAAAABIAAAAAAAEAAAAAABMAAAAAAAMAAAAAABQAAAAAAAIAAAABABQAAAABAAMAAAABABMAAAADAAYAAGABABIAAAAAAAYAAGABABEAAAADAAYAAGABABAAAAABAAYAAGABAA8AAAAAAAYAAGABAA4AAAACAAYAAGABAA0AAAAAAAYAAGABAAwAAAADAAYAAGABAAsAAAAAAAYAAGABAAoAAAADAAYAAGABAAkAAAACAAYAAGABAAgAAAACAAYAAGABAAcAAAADAAYAAGABAAYAAAABAAEAAAABAAUAAAAEAAAAAAACAAYAAAAHAAEAAAACAAcAAAAIAAEAAAACAAgAAAAHAAAAAAACAAkAAAAGAAIAAAACAAoAAAAGAAEAAAACAAsAAAAEAAEAAAACAAwAAAAJAAIAAAACAA0AAAAIAAAAAAACAA4AAAAIAAAAAAACAA8AAAAJAAAAAAACABAAAAAEAAEAAAACABEAAAAJAAAAAAACABIAAAAIAAEAAAACABMAAAAIAAEAAAACABQAAAAJAAcAAAADABQAAAAGAAEAAAADABMAAAAGAAAAAAADABIAAAAIAAIAAAADABEAAAADAAYAAAADABAAAAAHAAAAAAADAA8AAAAJAAEAAAADAA4AAAAGAAIAAAADAA0AAAAIAAEAAAADAAwAAAADAAYAAAADAAsAAAAGAAEAAAADAAoAAAAHAAAAAAADAAkAAAAGAAAAAAADAAgAAAAIAAIAAAADAAcAAAAHAAAAAAAEAAcAAAAJAAIAAAAEAAgAAAAGAAIAAAAEAAkAAAAHAAIAAAAEAAoAAAAIAAAAAAAEAAsAAAAGAAIAAAAEAAwAAAAEAAEAAAAEAA0AAAAJAAIAAAAEAA4AAAAIAAEAAAAEAA8AAAAHAAAAAAAEABAAAAAJAAIAAAAEABEAAAAEAAEAAAAEABIAAAAGAAAAAAAEABMAAAAIAAAAAAAEABQAAAAGAAEAAAAFABQAAAAJAAEAAAAFABMAAAAJAAAAAAAFABIAAAADAAYAAAAFABEAAAAIAAIAAAAFABAAAAAHAAAAAAAFAA8AAAAJAAAAAAAFAA4AAAAGAAIAAAAFAA0AAAABAAYAAAAFAAwAAAAGAAAAAAAFAAsAAAAIAAIAAAAFAAoAAAAIAAIAAAAFAAkAAAAIAAIAAAAFAAgAAAAJAAEAAAAGAAkAAAAIAAAAAAAGAAoAAAAJAAEAAAAGAAsAAAAGAAAAAAAGAAwAAAAJAAIAAAAGAA0AAAAAAAYAAAAGAA4AAAAHAAAAAAAGAA8AAAAJAAIAAAAGABAAAAAHAAIAAAAGABEAAAAJAAEAAAAGABIAAAAAAAYAAAAGABMAAAAGAAIAAAAGABQAAAAGAAIAAAAHABQAAAAJAAcAAAAHABMAAAAJAAcAAAAHABIAAAAEAAEAAAAHABEAAAAHAAAAAAAHABAAAAAJAAIAAAAHAA8AAAAIAAEAAAAHAA4AAAAIAAIAAAAHAA0AAAAEAAEAAAAHAAwAAAAHAAAAAAAHAAsAAAAGAAEAAAAHAAoAAAAGAAEAAAAHAAkAAAAGAAEAAAAIAA8AAAAIAAEAAAAIABAAAAAJAAIAAAAIABEAAAAHAAAAAAAIABIAAAAJAAcAAAAIABMAAAAAAAYAAAAIABQAAAAIAAIAAAAJABQAAAAJAAcAAAAJABMAAAABAAYAAAAJABIAAAAJAAcAAAAJABEAAAAIAAAAAAAJABAAAAAJAAAAAAAJAA8AAAAIAAAAAAAJAA4AAAADAAYAAAAJAA0AAAAHAAAAAAAJAAwAAAAJAAIAAAAJAAsAAAAIAAEAAAAJAAoAAAAJAAIAAAAJAAkAAAAIAAIAAAAKAAkAAAAGAAAAAAAKAAoAAAAJAAEAAAAKAAsAAAAJAAIAAAAKAAwAAAAGAAIAAAAKAA0AAAAIAAIAAAAKAA4AAAABAAYAAAAKAA8AAAAIAAIAAAAKABAAAAAHAAIAAAAKABEAAAAJAAIAAAAKABIAAAAJAAcAAAAKABMAAAACAAYAAAAKABQAAAAJAAcAAAALABQAAAAJAAcAAAALABMAAAACAAYAAAALABIAAAAJAAcAAAALABEAAAAIAAEAAAALABAAAAAGAAEAAAALAA8AAAAJAAEAAAALAA4AAAADAAYAAAALAA0AAAAIAAIAAAALAAwAAAAHAAIAAAALAAsAAAAJAAAAAAALAAoAAAAIAAEAAAAMAAsAAAAIAAAAAAAMAAwAAAAHAAIAAAAMAA0AAAAIAAIAAAAMAA4AAAABAAYAAAAMAA8AAAAHAAAAAAAMABAAAAAGAAAAAAAMABEAAAAIAAAAAAAMABIAAAAJAAcAAAAMABMAAAAAAAYAAAAMABQAAAAGAAEAAAANABQAAAAJAAcAAAANABMAAAAJAAcAAAANABIAAAABAAEAAAANABEAAAAIAAIAAAANABAAAAAGAAEAAAANAA8AAAAHAAAAAAANAA4AAAAGAAAAAAANAA0AAAABAAEAAAANAAwAAAAGAAAAAAANAAsAAAAIAAAAAAAOAA0AAAADAAYAAAAOAA4AAAAIAAEAAAAOAA8AAAAIAAAAAAAOABAAAAAJAAIAAAAOABEAAAAGAAAAAAAOABIAAAABAAYAAAAOABMAAAAHAAEAAAAOABQAAAAGAAEAAAAPABQAAAAHAAEAAAAPABMAAAAJAAIAAAAPABIAAAAAAAYAAAAPABEAAAAIAAAAAAAPABAAAAAIAAEAAAAPAA8AAAAHAAIAAAAPAA4AAAAGAAEAAAAPAA0AAAADAAYAAAAQAA4AAAAHAAEAAAAQAA8AAAAHAAAAAAAQABAAAAAIAAAAAAAQABEAAAABAAEAAAAQABIAAAAGAAAAAAAQABMAAAAHAAAAAAAQABQAAAAHAAAAAAARABQAAAAIAAAAAAARABMAAAAGAAAAAAARABIAAAAGAAAAAAARABEAAAACAAYAAAARABAAAAAIAAIAAAARAA8AAAAGAAIAAAASABAAAAABAAEAAAASABEAAAAIAAAAAAASABIAAAAHAAEAAAASABMAAAAJAAIAAAASABQAAAAJAAcAAAATABQAAAAEAAMAAAATABMAAAADAAYAAFATABIAAAADAAYAAFATABEAAAAAAAYAAFATABAAAAABAAYAAFAUABEAAAAFAAAAAAAUABIAAAAFAAAAAAAUABMAAAAFAAAAAAAUABQAAAAFAAAAAAAOAAAAAAACAAAAAAANAAAAAAACAAAAAAAMAAAAAAABAAAAAAALAAAAAAAEAAAAAAAKAAAAAAAEAAAAAAAJAAAAAAAEAAAAAAAIAAAAAAABAAAAAAAHAAAAAAACAAAAAAAGAAAAAAACAAAAAAAEAAEAAAABAAAAAAAFAAEAAAACAAAAAAAFAAIAAAADAAYAAAAGAAIAAAAIAAEAAAAGAAEAAAADAAYAAAAHAAEAAAADAAYAAAAHAAIAAAAIAAAAAAAIAAIAAAAHAAEAAAAIAAEAAAACAAYAAAAJAAEAAAAAAAYAAAAJAAIAAAAHAAIAAAAJAAMAAAAHAAEAAAAIAAMAAAAGAAAAAAAKAAMAAAAHAAAAAAAKAAIAAAAHAAIAAAAKAAEAAAACAAYAAAALAAEAAAACAAYAAAALAAIAAAAGAAEAAAALAAMAAAAJAAAAAAALAAQAAAAHAAIAAAAKAAQAAAAJAAAAAAALAAUAAAAIAAAAAAALAAYAAAAGAAIAAAAKAAYAAAAGAAIAAAAJAAYAAAAIAAIAAAAIAAYAAAAHAAIAAAAIAAUAAAAIAAIAAAAHAAUAAAAGAAEAAAAKAAcAAAAJAAEAAAALAAcAAAAJAAIAAAAMAAcAAAAGAAAAAAAMAAYAAAAIAAAAAAAMAAUAAAAJAAAAAAAMAAQAAAAGAAEAAAAMAAMAAAAIAAEAAAAMAAIAAAAJAAEAAAAMAAEAAAAAAAYAAAANAAEAAAADAAYAAAANAAIAAAAHAAAAAAANAAMAAAAJAAEAAAANAAQAAAAGAAAAAAANAAUAAAAHAAEAAAANAAYAAAAIAAIAAAANAAcAAAABAAEAAAANAAgAAAAGAAEAAAAMAAgAAAACAAYAAAANAAkAAAAJAAAAAAAOAAkAAAAGAAEAAAAOAAgAAAAJAAIAAAAOAAcAAAABAAYAAAAOAAYAAAAHAAIAAAAOAAUAAAAGAAIAAAAOAAQAAAAGAAIAAAAOAAMAAAAIAAAAAAAOAAIAAAAGAAEAAAAOAAEAAAABAAYAAAAPAAEAAAAEAAAAAAAPAAIAAAADAAYAAAAPAAMAAAAJAAIAAAAPAAQAAAAIAAAAAAAPAAUAAAAIAAIAAAAPAAYAAAAHAAAAAAAPAAcAAAACAAYAAAAPAAgAAAAGAAIAAAAPAAkAAAAIAAIAAAAPAAoAAAAGAAAAAAAOAAoAAAAHAAIAAAAPAAsAAAAHAAEAAAAQAAsAAAAIAAEAAAAQAAoAAAAHAAEAAAAQAAkAAAAHAAEAAAAQAAgAAAAJAAEAAAAQAAcAAAAGAAEAAAAQAAYAAAABAAEAAAAQAAUAAAAGAAEAAAAQAAQAAAAHAAIAAAAQAAMAAAAGAAAAAAAQAAIAAAAEAAEAAAAQAAEAAAABAAAAAAARAAIAAAACAAAAAAARAAMAAAAEAAEAAAARAAQAAAAGAAAAAAARAAUAAAAIAAEAAAARAAYAAAADAAYAAAARAAcAAAAIAAIAAAARAAgAAAAIAAIAAAARAAkAAAAIAAAAAAARAAoAAAAJAAEAAAARAAsAAAAGAAEAAAARAAwAAAADAAYAAAAQAAwAAAABAAEAAAASAAwAAAAHAAIAAAASAAsAAAABAAEAAAASAAoAAAAGAAEAAAASAAkAAAAIAAEAAAASAAgAAAAIAAIAAAASAAcAAAAJAAAAAAASAAYAAAAJAAAAAAASAAUAAAACAAYAAFASAAQAAAAEAAEAAAASAAMAAAAEAAAAAAASAAIAAAAFAAAAAAATAAQAAAAFAAAAAAATAAUAAAAEAAAAAAATAAYAAAAEAAEAAAATAAcAAAADAAYAAFATAAgAAAABAAYAAFATAAkAAAADAAYAAFATAAoAAAADAAYAAFATAAsAAAACAAYAAFATAAwAAAABAAYAAFATAA0AAAACAAYAAFASAA0AAAAHAAIAAAATAA4AAAADAAYAAFAUAA4AAAAFAAAAAAAUAA0AAAAFAAAAAAAUAAwAAAAFAAAAAAAUAAsAAAAFAAAAAAAUAAoAAAAFAAAAAAAUAAkAAAAFAAAAAAAUAAgAAAAFAAAAAAAUAAcAAAAFAAAAAAAUAAYAAAAFAAAAAAAFAAQAAAAJAAEAAAAGAAQAAAAIAAIAAAATAAMAAAAFAAAAAAABAAMAAAAAAAAAAAADAAEAAAAAAAMAAAAFAAAAAAAAAAAAAAAPAAAAAAAFAAMAAAARAAEAAAAFAAMAAAAUAAUAAAAFAAAAAAAAAAUAAAAAAAEAAAAQAAAAAAAIAAcAAAARAAAAAAAIAAcAAAASAAAAAAAIAAcAAAASAAEAAAAIAAcAAAATAAAAAAAIAAcAAAATAAEAAAAIAAcAAAATAAIAAAAIAAcAAAAUAAIAAAAIAAcAAAAUAAEAAAAIAAcAAAAUAAAAAAAIAAcAAAAUAAMAAAAIAAcAAAAUAAQAAAAIAAcAAAAAAAQAAAAIAAcAAAAAAAMAAAAIAAcAAAAAAAIAAAAIAAcAAAAAAAEAAAAIAAcAAAAAAAAAAAAIAAcAAAABAAAAAAAIAAcAAAABAAEAAAAIAAcAAAACAAEAAAAIAAcAAAABAAIAAAAIAAcAAAACAAAAAAAIAAcAAAADAAAAAAAIAAcAAAAEAAAAAAAIAAcAAAAUABUAAAAFAAQAAAAAABUAAAAAAAQAAAATABUAAAAAAAUAAAATABYAAAAFAAIAAAASABcAAAAEAAUAAAATABcAAAAFAAQAAAARABgAAAAEAAUAAAAPABkAAAAEAAUAAAAQABkAAAAEAAQAAAABABUAAAADAAUAAAABABYAAAAAAAMAAAACABcAAAADAAUAAAABABcAAAAAAAQAAAADABgAAAAFAAUAAAAFABkAAAAFAAUAAAAEABkAAAAEAAQAAAACABgAAAAAAAQAAAADABkAAAAAAAQAAAAOABoAAAABAAQAAAANABoAAAACAAQAAAAMABoAAAACAAQAAAALABoAAAADAAQAAAAKABoAAAABAAQAAAAJABoAAAACAAQAAAAIABoAAAACAAQAAAAHABoAAAACAAQAAAAGABoAAAADAAQAAAARABkAAAAFAAQAAAASABgAAAAFAAQAAAAPABoAAAAFAAQAAAAFABoAAAAAAAQAAAAQABoAAAAIAAcAAAARABoAAAAIAAcAAAASABoAAAAIAAcAAAASABkAAAAIAAcAAAATABgAAAAIAAcAAAAUABcAAAAIAAcAAAAUABYAAAAIAAcAAAAUABgAAAAIAAcAAAAUABkAAAAIAAcAAAAUABoAAAAIAAcAAAATABoAAAAIAAcAAAATABkAAAAIAAcAAAAEABoAAAAIAAcAAAADABoAAAAIAAcAAAACABoAAAAIAAcAAAABABoAAAAIAAcAAAAAABoAAAAIAAcAAAAAABkAAAAIAAcAAAAAABgAAAAIAAcAAAAAABcAAAAIAAcAAAAAABYAAAAIAAcAAAABABgAAAAIAAcAAAABABkAAAAIAAcAAAACABkAAAAIAAcAAAACABUAAAABAAIAAAADABUAAAAJAAcAAAAEABUAAAAGAAAAAAAFABUAAAAHAAEAAAAGABUAAAAGAAEAAAAHABUAAAAJAAcAAAAIABUAAAAGAAAAAAAJABUAAAAJAAcAAAAKABUAAAAJAAcAAAALABUAAAAJAAcAAAAMABUAAAAJAAIAAAANABUAAAAJAAcAAAAOABUAAAAIAAEAAAAPABUAAAAIAAIAAAAQABUAAAAHAAEAAAARABUAAAAJAAcAAAASABUAAAAEAAIAAAARABYAAAAJAAcAAAASABYAAAAEAAMAAAARABcAAAAEAAMAAAAQABcAAAAJAAcAAAAQABgAAAAEAAMAAAAPABgAAAABAAYAADAOABgAAAAJAAcAAAANABgAAAAJAAcAAAANABkAAAABAAYAADAOABkAAAAEAAMAAAAMABkAAAABAAYAADALABkAAAAAAAYAADAKABkAAAADAAYAADAJABkAAAADAAYAADAIABkAAAADAAYAADAHABkAAAAAAAYAADAGABkAAAABAAMAAAAGABgAAAAJAAcAAAAFABgAAAAAAAYAADAEABgAAAABAAMAAAAHABgAAAAJAAcAAAAIABgAAAAJAAcAAAAJABgAAAAJAAcAAAAKABgAAAAJAAcAAAALABgAAAAJAAcAAAAMABgAAAAJAAcAAAAPABcAAAAJAAcAAAAOABcAAAAIAAEAAAANABcAAAAJAAcAAAAMABcAAAAIAAAAAAALABcAAAAJAAEAAAAKABcAAAAGAAEAAAAJABcAAAAHAAEAAAAIABcAAAAHAAEAAAAHABcAAAAJAAcAAAAGABcAAAAJAAAAAAAFABcAAAAJAAcAAAAEABcAAAAJAAcAAAADABcAAAABAAMAAAADABYAAAAJAAcAAAACABYAAAABAAMAAAAEABYAAAAIAAAAAAAFABYAAAAIAAIAAAAGABYAAAAHAAAAAAAHABYAAAAJAAcAAAAIABYAAAAIAAIAAAAJABYAAAAJAAcAAAAKABYAAAAJAAcAAAALABYAAAAJAAcAAAAMABYAAAAIAAIAAAANABYAAAAJAAcAAAAOABYAAAAIAAIAAAAPABYAAAAIAAEAAAAQABYAAAAGAAAAAAA=")
tile_set = ExtResource("1_8kufv")

[node name="Layer1" type="TileMapLayer" parent="NavigationRegion2D"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAKABUAAAAJAAMAAAAGAAYAAAAHAAcAAAARABAAAAAHAAcAAAAOABkAAAAHAAcAAAABAAkAAAAIAAYAAAAOAAEAAAAFAAYAAAACABYAAAAEAAYAAAAEABgAAAAEAAYAAAADABcAAAAHAAcAABARAAoAAAAFAAkAAAATAAkAAAAFAAkAAAATAAcAAAADAAkAAAARAAYAAAAFAAkAAAAPAAcAAAADAAkAAAAPAAkAAAAFAAkAABABAAoAAAAJAAQAAAACAAoAAAAJAAUAAAABAAgAAAAEAAYAAAABAAcAAAAFAAYAABACAAkAAAAEAAgAAAADAAoAAAAHAAcAAAAEAAoAAAAIAAYAAAADAAsAAAAIAAYAABAEAAkAAAAFAAgAAAA=")
tile_set = ExtResource("1_8kufv")

[node name="LadderArea" type="Area2D" parent="."]
position = Vector2(168, 344)
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderArea"]
shape = SubResource("CircleShape2D_hxbls")

[node name="Ladder" type="Area2D" parent="."]
position = Vector2(168, 344)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder"]
shape = SubResource("RectangleShape2D_65f60")

[node name="EnterLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 148.0
offset_top = 325.0
offset_right = 188.0
offset_bottom = 335.0
text = "Enter"
label_settings = SubResource("LabelSettings_2ohol")

[node name="Armorer" parent="." instance=ExtResource("4_8hjcu")]
position = Vector2(55, 140)

[node name="Librarian" parent="." instance=ExtResource("5_hlh4u")]
position = Vector2(280, 140)

[node name="Tome" parent="." instance=ExtResource("6_fw0ow")]
position = Vector2(281, 226)

[connection signal="area_entered" from="LadderArea" to="." method="_on_ladder_area_area_entered"]
[connection signal="body_entered" from="LadderArea" to="." method="_on_ladder_area_body_entered"]
[connection signal="body_exited" from="LadderArea" to="." method="_on_ladder_area_body_exited"]
[connection signal="input_event" from="Ladder" to="." method="_on_ladder_input_event"]
